CRUD Swagger
