# app/Http/Controllers/Swagger/PostController.php
@@ -1,0 +1,146 @@
+<?php
+
+namespace App\Http\Controllers\Swagger;
+
+use App\Http\Controllers\Controller;
+
+/**
+ * @OA\Post(
+ *     path="/api/posts",
+ *     summary="Create",
+ *     tags={"Post"},
+ *
+ *     @OA\RequestBody(
+ *         @OA\JsonContent(
+ *             allOf={
+ *                 @OA\Schema(
+ *                     @OA\Property(property="title", type="string", example="Some title"),
+ *                     @OA\Property(property="likes", type="integer", example=123),
+ *
+ *                 )
+ *             }
+ *         )
+ *     ),
+ *
+ *     @OA\Response(
+ *         response=200,
+ *         description="Ok",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="data", type="object",
+ *                 @OA\Property(property="id", type="integer", example=1),
+ *                 @OA\Property(property="title", type="string", example="Some title"),
+ *                 @OA\Property(property="likes", type="integer", example=123),
+ *             ),
+ *         ),
+ *     ),
+ * ),
+ *
+ * @OA\Get(
+ *     path="/api/posts",
+ *     summary="Index",
+ *     tags={"Post"},
+ *
+ *     @OA\Response(
+ *         response=200,
+ *         description="Ok",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="data", type="array", @OA\Items(
+ *                 @OA\Property(property="id", type="integer", example=1),
+ *                 @OA\Property(property="title", type="string", example="Some title"),
+ *                 @OA\Property(property="likes", type="integer", example=123),
+ *             )),
+ *         ),
+ *     ),
+ * ),
+ *
+ * @OA\Get(
+ *     path="/api/posts/{post}",
+ *     summary="Show",
+ *     tags={"Post"},
+ *
+ *     @OA\Parameter(
+ *         description="Post's id",
+ *         in="path",
+ *         name="post",
+ *         required=true,
+ *         example=1
+ *     ),
+ *
+ *     @OA\Response(
+ *         response=200,
+ *         description="Ok",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="data", type="object",
+ *                 @OA\Property(property="id", type="integer", example=1),
+ *                 @OA\Property(property="title", type="string", example="Some title"),
+ *                 @OA\Property(property="likes", type="integer", example=123),
+ *             ),
+ *         ),
+ *     ),
+ * ),
+ *
+ *
+ * @OA\Patch(
+ *     path="/api/posts/{post}",
+ *     summary="Update",
+ *     tags={"Post"},
+ *
+ *     @OA\Parameter(
+ *         description="Post's id",
+ *         in="path",
+ *         name="post",
+ *         required=true,
+ *         example=1
+ *     ),
+ *
+ *     @OA\RequestBody(
+ *         @OA\JsonContent(
+ *             allOf={
+ *                 @OA\Schema(
+ *                     @OA\Property(property="title", type="string", example="Some title for edit"),
+ *                     @OA\Property(property="likes", type="integer", example=123),
+ *
+ *                 )
+ *             }
+ *         )
+ *     ),
+ *
+ *     @OA\Response(
+ *         response=200,
+ *         description="Ok",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="data", type="object",
+ *                 @OA\Property(property="id", type="integer", example=1),
+ *                 @OA\Property(property="title", type="string", example="Some title"),
+ *                 @OA\Property(property="likes", type="integer", example=123),
+ *             ),
+ *         ),
+ *     ),
+ * ),
+ *
+ * @OA\Delete(
+ *     path="/api/posts/{post}",
+ *     summary="Delete",
+ *     tags={"Post"},
+ *
+ *     @OA\Parameter(
+ *         description="Post's id",
+ *         in="path",
+ *         name="post",
+ *         required=true,
+ *         example=1
+ *     ),
+ *
+ *     @OA\Response(
+ *         response=200,
+ *         description="Ok",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="message", type="string", example="deleted"),
+ *         ),
+ *     ),
+ * ),
+ */
+class PostController extends Controller
+{
+
+}
